fixed whitespace issue in nav

--- a/source/stylesheets/components/_nav.sass
+++ b/source/stylesheets/components/_nav.sass
@@ -7,9 +7,11 @@ nav
       display: inline-block
       font-family: $heading-font-family
       font-weight: 700
+      font-size: 0
       li
         display: inline-block
         margin-bottom: 0
+        font-size: rem(12)
       &.right-menu
         float: right
         font-size: rem(12)
